Fix: Remove overflow

--- a/developers-house/website/website/src/transitions.css
+++ b/developers-house/website/website/src/transitions.css
@@ -8,7 +8,6 @@ body {
     text-decoration: none;
     padding: 0;
     margin: 0;
-    overflow: hidden;
 }
 
 a {
